test/constructor/default_arguments.lox
struct Foo {}

var foo = Foo(1, 2, 3) // error: expected 0 argument but got 3
